Deployment/Deployment-java.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: springtest
  namespace: default
  labels:
    app: springtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springtest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springtest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: springtest
          image: "nikita9355/springtest:latest"
          ports:
            - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: springtest-service
  labels:
    env  : prod
    owner: BykovNV
spec:
  selector:
    app: springtest
  ports:
    - name      : app-listener
      nodePort  : 30030
      protocol  : TCP
      port      : 80
      targetPort: 8080 # Port on Pod
  type: NodePort

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-java-app
spec:
  rules:
  - host: www.java-app.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springtest-service
              port:
                number: 80
